--- a/scripts/processing-taobao-vill.html
+++ b/scripts/processing-taobao-vill.html
@@ -317,14 +317,14 @@ $(document).ready(function () {
 ## 
 ##     intersect, setdiff, setequal, union</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
+<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
 <pre><code>## ✔ ggplot2 2.2.1.9000     ✔ readr   1.1.1     
 ## ✔ tibble  1.4.2          ✔ purrr   0.2.4     
 ## ✔ tidyr   0.7.2          ✔ stringr 1.3.0     
 ## ✔ ggplot2 2.2.1.9000     ✔ forcats 0.2.0</code></pre>
 <pre><code>## Warning: package 'tibble' was built under R version 3.4.3</code></pre>
 <pre><code>## Warning: package 'stringr' was built under R version 3.4.3</code></pre>
-<pre><code>## ── Conflicts ───────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(httr)</code></pre>
@@ -392,6 +392,7 @@ taobao_villages_subset_2016</code></pre>
     NULL
   }
 }
+
 
 # taobao_geocoded &lt;- taobao_villages_subset_2016 %&gt;%
 #   pmap_df(geocode_the_place, geocodeAdd)</code></pre>
