--- a/scripts/processing-taobao-vill.html
+++ b/scripts/processing-taobao-vill.html
@@ -317,17 +317,20 @@ $(document).ready(function () {
 ## 
 ##     intersect, setdiff, setequal, union</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
+<pre><code>## ── Attaching packages ──────────────────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
 <pre><code>## ✔ ggplot2 2.2.1.9000     ✔ readr   1.1.1     
 ## ✔ tibble  1.4.2          ✔ purrr   0.2.4     
 ## ✔ tidyr   0.7.2          ✔ stringr 1.3.0     
 ## ✔ ggplot2 2.2.1.9000     ✔ forcats 0.2.0</code></pre>
 <pre><code>## Warning: package 'tibble' was built under R version 3.4.3</code></pre>
 <pre><code>## Warning: package 'stringr' was built under R version 3.4.3</code></pre>
-<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ─────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>library(httr)</code></pre>
+<pre class="r"><code>library(httr)
+library(ggmap)</code></pre>
+<pre><code>## Google Maps API Terms of Service: http://developers.google.com/maps/terms.</code></pre>
+<pre><code>## Please cite ggmap if you use it: see citation(&quot;ggmap&quot;) for details.</code></pre>
 <section id="geocoding-taobao-villages" class="level2">
 <h2>Geocoding taobao villages</h2>
 <p>There are 1312 taobao villages as of 2017. This is under the google geocoding api limit, yay.</p>
@@ -365,35 +368,27 @@ taobao_villages_2016 %&gt;% count(xiangzhen)</code></pre>
 ##  9 三甲街道       1
 ## 10 三里河街道     1
 ## # ... with 483 more rows</code></pre>
-<pre class="r"><code>taobao_villages_subset_2016 &lt;- subset(taobao_villages_2016, sheng == '河北省' )
+<pre class="r"><code>taobao_villages_subset_2016 &lt;- subset(taobao_villages_2016, xiangzhen == '三合镇' )
 #Go through this list and geocode them all !
 
 taobao_villages_subset_2016</code></pre>
-<pre><code>## # A tibble: 91 x 6
-##    sheng  shi    xian     xiangzhen cun      geocodeAdd    
-##    &lt;chr&gt;  &lt;chr&gt;  &lt;chr&gt;    &lt;chr&gt;     &lt;chr&gt;    &lt;chr&gt;         
-##  1 河北省 保定市 安新县   安新镇    大张庄村 河北省大张庄村
-##  2 河北省 保定市 白沟新城 白沟镇    白五村   河北省白五村  
-##  3 河北省 保定市 白沟新城 白沟镇    来远村   河北省来远村  
-##  4 河北省 保定市 白沟新城 白沟镇    王庄村   河北省王庄村  
-##  5 河北省 保定市 白沟新城 白沟镇    小营村   河北省小营村  
-##  6 河北省 保定市 白沟新城 白沟镇    许庄村   河北省许庄村  
-##  7 河北省 保定市 高碑店市 梁家营乡  梁北村   河北省梁北村  
-##  8 河北省 保定市 高碑店市 新城镇    南场村   河北省南场村  
-##  9 河北省 保定市 高碑店市 张六庄乡  南宫井村 河北省南宫井村
-## 10 河北省 保定市 蠡县     南庄镇    后刘市村 河北省后刘市村
-## # ... with 81 more rows</code></pre>
-<pre class="r"><code>geocode_the_place &lt;- function(geocodeAdd,...) {
-    
-    a &lt;- geocode(geocodeAdd, output='all', messaging=TRUE, override_limit=TRUE)
-      if (status_code(json) == 200) {
-        response &lt;- fromJSON(content(json, as='text'))
-    } else {
-    NULL
-  }
-}
-
-
+<pre><code>## # A tibble: 3 x 6
+##   sheng  shi    xian   xiangzhen cun      geocodeAdd    
+##   &lt;chr&gt;  &lt;chr&gt;  &lt;chr&gt;  &lt;chr&gt;     &lt;chr&gt;    &lt;chr&gt;         
+## 1 浙江省 台州市 天台县 三合镇    大横金村 浙江省大横金村
+## 2 浙江省 台州市 天台县 三合镇    下坊村   浙江省下坊村  
+## 3 浙江省 台州市 天台县 三合镇    洋头村   浙江省洋头村</code></pre>
+<pre class="r"><code># geocode_the_place &lt;- function(geocodeAdd,...) {
+#     
+#     a &lt;- geocode(geocodeAdd, output='all', messaging=TRUE, override_limit=TRUE)
+#       if (status_code(json) == 200) {
+#         response &lt;- fromJSON(content(json, as='text'))
+#     } else {
+#     NULL
+#   }
+# }
+# 
+# 
 # taobao_geocoded &lt;- taobao_villages_subset_2016 %&gt;%
 #   pmap_df(geocode_the_place, geocodeAdd)</code></pre>
 <pre class="r"><code>taobao_villages_2016</code></pre>
@@ -446,7 +441,7 @@ taobao_villages_2014 &lt;- readxl::read_excel('data/taobao-village-list/taobao-v
 
 taobao_villages_2014 &lt;- taobao_villages_2014 %&gt;% 
   mutate(., geocodeAdd = paste0(sheng,cun)) %&gt;%
-  select(-goods_made)
+  dplyr::select(-goods_made)
 
 
 taobao_villages_2015 %&gt;% count(xian)</code></pre>
